# WiFi-ESB

./: LICENSE  README.md
cluster_head_multi_image_fota/: CMakeLists.txt  README.md  overlay_debug.conf  pm_static_heliogen_g5_node_nrf5340_cpuapp.yml  prj.conf
cluster_head_multi_image_fota/boards/arm/heliogen_g5_node/: CMakeLists.txt  board.cmake  heliogen_g5_node_nrf5340_cpuapp.dts  heliogen_g5_node_nrf5340_cpuapp_defconfig  heliogen_g5_node_nrf5340_cpuapp_ns_defconfig  heliogen_g5_node_nrf5340_cpunet.dts  heliogen_g5_node_nrf5340_cpunet.yaml  nrf5340_cpuapp_common-pinctrl.dtsi
cluster_head_multi_image_fota/child_image/mcuboot/: prj.conf
cluster_head_multi_image_fota/child_image/mcuboot/boards/: heliogen_g5_node_nrf5340_cpuapp.overlay
cluster_head_multi_image_fota/net_ipc/: CMakeLists.txt  new_pm_static.yml  prj.conf
cluster_head_multi_image_fota/net_ipc/boards/arm/heliogen_g5_node/: Kconfig  Kconfig.board  heliogen_g5_node_nrf5340_cpuapp-pinctrl.dtsi  nrf5340_cpunet_reset.c  nrf5340_shared_sram_planning_conf.dts
cluster_head_multi_image_fota/net_ipc/src/: main.c  main_new.c
cluster_head_multi_image_fota/src/: TODOS.txt  main.c
cluster_head_multi_image_fota/src/bsp/: helio_pid.h  helio_timer.c  led.h
cluster_head_multi_image_fota/src/bsp/id/: id_shell.c
cluster_head_multi_image_fota/src/cfg/: cfg.c  cfg.h  cfg_defaults.c  cfg_defaults.h  cfg_json.c  cfg_json.h  cfg_lanc_hem.json  cfg_shell.c
cluster_head_multi_image_fota/src/data/: motor_constants.h
cluster_head_multi_image_fota/src/data/json/: cla_pub_json.h  fs_sub_json.c  fs_sub_json.h  mppt_pub_json.c  ncla_pub_json.h  node_id_json.h  ota_dfu_json.c  ota_dfu_json.h  remote_pub_sub_json.c  rtt_json.c  rtt_json.h  status_json.c  status_json.h  stow_json.h  sys_pub_json.c  sys_pub_json.h  template_pub_json.c  template_pub_json.h  wifi_stats_pub_json.h
cluster_head_multi_image_fota/src/data/mqtt/: fs_sub_mqtt.h  mppt_pub_mqtt.h  mqtt_common.c  ncla_pub_mqtt.h  ota_dfu_mqtt.c  remote_pub_sub_mqtt.h  rtt_mqtt.c  rtt_mqtt.h  start_mqtt.h  status_mqtt.c  sys_pub_mqtt.c  template_sub_mqtt.c  template_sub_mqtt.h
cluster_head_multi_image_fota/src/data/types/: cla_pub_types.h  control_types.h  fs_sub_types.h  mppt_pub_types.h  reboot_types.h  remote_pub_sub_types.h  rtt_types.h  start_types.h  sys_pub_types.h  template_sub_types.h  wifi_stats_pub_types.h
cluster_head_multi_image_fota/src/events/: ota_dfu_events.c  power_events.c  transport_events.c  transport_events.h  wifi_events.c  wifi_events.h
cluster_head_multi_image_fota/src/hal/: helio_ntc.h  helio_saadc.h  helio_timer.h
cluster_head_multi_image_fota/src/services/http_update/: http_update.h
cluster_head_multi_image_fota/src/services/publisher/: ncla_pub.h  ota_dfu_pub.c  pubs.h  status_pub.c  status_pub.h  sys_pub.c  sys_pub.h  template_pub.c  template_pub.h
cluster_head_multi_image_fota/src/shell_cmds/: http_update_shell.c  manager_shell.c  shell_boot_count.c  shell_eol.c  shell_stats.c  shell_version.c
cluster_head_multi_image_fota/src/storage/: storage.c  storage_test.c
cluster_head_multi_image_fota/src/sys/: assert_post_action.c  assert_post_action.h  boot_count.h  eol_test_result.c  eol_test_result.h  fatal_error_handler.c  reboot_timer.c  reset_cause.c  retained_ram.c  retained_ram.h  sys_watchdog.h
cluster_head_multi_image_fota/src/threads/: led_patterns.c  led_thread.c  led_thread.h  led_timer.c  power_obj.c  power_thread.c  template_thread.c  time_sync.c  time_sync.h  wifi_thread.c  wifi_thread.h
cluster_head_multi_image_fota/src/threads/manager/: manager_thread_monitor.c  manager_thread_monitor.h
cluster_head_multi_image_fota/src/transport/: CMakeLists.txt  mqtt_helper_heliogen.c  transport.c  transport_fsm.c  transport_priv.h  transport_queue.c  transport_queue.h  transport_timer.c
cluster_head_multi_image_fota/src/transport/credentials/: ca-cert.pem
cluster_head_multi_image_fota/src/utils/: get_nearest_element_index.h  get_random_number.c  get_random_number.h  jitter.c  jitter.h  null_param_check.h  string_utils.c
cluster_node_multi_image_fota/: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  jflash.bat  jflash.sh  overlay-logging.conf  overlay-wifi-config.conf  overlay_release.conf  pm_static_heliogen_g5_node_nrf5340_cpuapp.yml
cluster_node_multi_image_fota/aci/: CMakeLists.txt
cluster_node_multi_image_fota/net_ipc/: not_used_Kconfig  not_used_pm_static.yml  prj.conf
cluster_node_multi_image_fota/net_ipc/boards/: heliogen_g5_node_nrf5340_cpuapp.overlay
cluster_node_multi_image_fota/net_ipc/src/: main.c
cluster_node_multi_image_fota/src/: ipc_handler.c  ipc_handler.h  main.c
cluster_node_multi_image_fota/src/bsp/: helio_gpio.c  helio_ntc.c  helio_pid.c  helio_pwm.c  helio_saadc.c  helio_spi_flash.c  heliogen_io.h  led.c  lis2hh12_regs.h
cluster_node_multi_image_fota/src/cfg/: cfg.c  cfg_examples.txt  cfg_lanc.txt  cfg_life_cycle_hem.json  cfg_life_cycle_tb.json  cfg_node.json
cluster_node_multi_image_fota/src/events/: ota_dfu_events.h  power_events.h
cluster_node_multi_image_fota/src/hal/: helio_pwm.h  helio_quad_encoder.h
cluster_node_multi_image_fota/src/services/: mcumgr_service.c  mcumgr_service.h
cluster_node_multi_image_fota/src/shell_cmds/: shell_dhcp.c  shell_error.c  shell_led.c  shell_mppt.c  shell_mqtt.c  shell_reboot.c  shell_retained_ram.c  shell_sys.c
cluster_node_multi_image_fota/src/storage/: fs_shell.c  storage.h  storage_counter.c  storage_counter.h
cluster_node_multi_image_fota/src/sys/: app_version.c  app_version.h  boot_count.c  fatal_error_handler.h  reboot_timer.h  reset_cause.h  sys_watchdog.c
cluster_node_multi_image_fota/src/threads/: led_patterns.h  led_timer.h  power_obj.h  power_thread.c  power_thread.h  status_obj.c  status_obj.h  template_thread.h  wifi_thread.c
cluster_node_multi_image_fota/src/transport/: mqtt_helper_heliogen.h  transport.h  transport_client_id.c  transport_stats.c  (+4 more)
cluster_node_multi_image_fota/zephyr/: module.yml
data/Config 1/: rtt_results.csv
data/Config 2/: rtt_results.csv
data/Config 3/: rtt_results.csv
(+76 files in other folders)
